Update style to match latest linting and template changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
   # Pull the docker image first so the test doesn't wait for this
   - docker pull nfcore/chipseq:dev
   # Fake the tag locally so that the pipeline runs properly
-  - docker tag nfcore/chipseq:dev nfcore/chipseq:latest
+  # Looks weird when this is :dev to :dev, but makes sense when testing code for a release (:dev to :1.0.1)
+  - docker tag nfcore/chipseq:dev nfcore/chipseq:dev
 
 install:
   # Install Nextflow
