--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,6 @@
 
 // Global default params, used in configs
 params {
-  container = 'nfcore/chipseq:latest' // Container slug. Stable releases should specify release tag!
 
   // Options: Generic
   reads = "data/*{1,2}*.fastq.gz"
@@ -64,30 +63,30 @@ params {
   igenomes_base = "./iGenomes"
   igenomesIgnore = false
   custom_config_version = 'master'
-  config_profile_description = false
-  config_profile_contact = false
-  config_profile_url = false
+  custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 
 }
+
+// Container slug. Stable releases should specify release tag!
+// Developmental code should specify :dev
+process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
 
 // Load nf-core custom profiles from different Institutions
-includeConfig "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}/nfcore_custom.config"
+try {
+  includeConfig "${params.custom_config_base}/nfcore_custom.config"
+} catch (Exception e) {
+  System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+}
 
 profiles {
   awsbatch { includeConfig 'conf/awsbatch.config' }
   conda { process.conda = "$baseDir/environment.yml" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
-  docker {
-    docker.enabled = true
-    process.container = params.container
-  }
-  singularity {
-    singularity.enabled = true
-    process.container = {"shub://${params.container.replace('nfcore', 'nf-core')}"}
-  }
+  docker { docker.enabled = true }
+  singularity { singularity.enabled = true }
   test { includeConfig 'conf/test.config' }
 }
 
