--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,7 @@ params {
   name = false
   plaintext_email = false
   monochrome_logs = false
+  maxMultiqcEmailFileSize = 25.MB
 
   // Options: Config
   multiqc_config = "$baseDir/assets/multiqc_config.yaml"
@@ -57,8 +58,14 @@ params {
   awsqueue = false
   awsregion = 'eu-west-1'
 
+  // Options: Custom config
+  config_profile_description = false
+  config_profile_contact = false
+  config_profile_url = false
+
   // Options: Default
   help = false
+  hostnames = false
   tracedir = "${params.outdir}/pipeline_info"
   igenomes_base = "./iGenomes"
   igenomesIgnore = false
@@ -100,23 +107,24 @@ if(!params.igenomesIgnore){
 
 timeline {
   enabled = true
-  file = "${params.tracedir}/exection_timeline.html"
+  file = "${params.tracedir}/nf-core/execution_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.tracedir}/exection_report.html"
+  file = "${params.tracedir}/nf-core/execution_report.html"
 }
 trace {
   enabled = true
-  file = "${params.tracedir}/exection_trace.txt"
+  file = "${params.tracedir}/nf-core/execution_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.tracedir}/pipeline_dag.svg"
+  file = "${params.tracedir}/nf-core/pipeline_dag.svg"
 }
 
 manifest {
   name = 'nf-core/chipseq'
+  author = 'Philip Ewels'
   homePage = 'https://github.com/nf-core/chipseq'
   description = 'Analysis pipeline used for ChIP-seq data'
   mainScript = 'main.nf'
