Update bin, conf and assets files

--- a/conf/base.config
+++ b/conf/base.config
@@ -1,6 +1,6 @@
 /*
  * -------------------------------------------------
- *  Nextflow base config file
+ *  nf-core/chipseq Nextflow base config file
  * -------------------------------------------------
  * A 'blank slate' config file, appropriate for general
  * use on most high performace compute environments.
@@ -9,29 +9,25 @@
  * run on the logged in environment.
  */
 
-// Defaults config params, may be overwritten by later configs
-params {
-  max_memory = 128.GB
-  max_cpus = 16
-  max_time = 240.h
-  igenomes_base = 's3://ngi-igenomes/igenomes/'
-}
-
-
 process {
 
   cpus = { check_max( 1 * task.attempt, 'cpus' ) }
   memory = { check_max( 2.GB * task.attempt, 'memory' ) }
   time = { check_max( 2.h * task.attempt, 'time' ) }
 
-  errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'terminate' }
+  errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
   maxRetries = 1
   maxErrors = '-1'
 
-  // Environment modules and resource requirements
+  // Process-specific resource requirements
   withName:trim_galore {
     cpus = { check_max( 2 * task.attempt, 'cpus' ) }
     memory = { check_max( 16.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  withLabel:process_medium {
+    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
   withLabel:process_big {
@@ -39,15 +35,19 @@ process {
     memory = { check_max( 64.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
   }
-  withLabel:process_medium {
-    cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-    memory = { check_max( 32.GB * task.attempt, 'memory' ) }
-    time = { check_max( 8.h * task.attempt, 'time' ) }
-  }
   withLabel:process_long {
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
   withName:get_software_versions {
     cache = false
   }
+
+}
+
+// Defaults config params, may be overwritten by later configs
+params {
+  max_memory = 128.GB
+  max_cpus = 16
+  max_time = 240.h
+  igenomes_base = 's3://ngi-igenomes/igenomes/'
 }
