--- a/environment.yml
+++ b/environment.yml
@@ -7,42 +7,31 @@ channels:
   - defaults
 dependencies:
   ## conda-forge packages
-  - openjdk=11.0.1      # Needed for FastQC - conda build hangs without this
-  - gawk=4.2.1
-  - r-markdown=0.9
-  - r-catools=1.17.1.2
-  - r-snow=0.4_3
-  - r-r.utils=2.8.0
-  - r-stringr=1.4.0
-  - r-evaluate=0.13
-  - r-domc=1.3.5
+  - r-base=3.4.1
+  - r-optparse=1.6.0
+  - r-rcolorbrewer=1.1_2
   - r-ggplot2=3.1.0
-  - r-knitr=1.21
-  - r-rmysql=0.10.13
-  - r-doparallel=1.0.14
+  - r-reshape2=1.4.3
+  - r-scales=1.0.0
+  - r-pheatmap=1.0.10
+  - r-lattice=0.20_35
+  - r-upsetr=1.3.3
 
   ## bioconda packages
   - fastqc=0.11.8
   - trim-galore=0.5.0
   - bwa=0.7.17
-  - bedtools=2.27.1
   - samtools=1.9
-  - picard=2.18.27
-  - deeptools=3.2.0
+  - picard=2.19.0
+  - bamtools=2.5.1
+  - pysam=0.15.2
+  - bedtools=2.27.1
+  - ucsc-bedgraphtobigwig=377
+  - deeptools=3.2.1
   - macs2=2.1.2
+  - homer=4.9.1
+  - subread=1.6.4
   - multiqc=1.7
-
   - r-spp=1.15.5
-  - bioconductor-rsamtools=1.34.0
-  - bioconductor-shortread=1.40.0
-  - bioconductor-genomicranges=1.34.0
-  - bioconductor-genomicfeatures=1.34.1
-  - bioconductor-ensembldb=2.6.3
-  - bioconductor-chippeakanno=3.16.0
-  - bioconductor-biomart=2.38.0
-  - bioconductor-rtracklayer=1.42.1
-  - bioconductor-bsgenome=1.50.0
-  - bioconductor-bsgenome.hsapiens.ucsc.hg19=1.4.0
-  - bioconductor-bsgenome.mmusculus.ucsc.mm10=1.4.0
-  - bioconductor-org.hs.eg.db=3.7.0
-  - bioconductor-org.mm.eg.db=3.7.0
+  - bioconductor-deseq2=1.20.0
+  - bioconductor-vsn=3.46.0
