--- a/nextflow.config
+++ b/nextflow.config
@@ -76,7 +76,8 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/chipseq:dev'
+//process.container = 'nfcore/chipseq:dev'
+process.container = 'drpatelh/chipseq:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
