Sync conf and bin directories with atacseq

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,55 +8,49 @@
  * name here.
  */
 
-
 // Global default params, used in configs
 params {
 
   // Options: Generic
-  reads = "data/*{1,2}*.fastq.gz"
-  readPaths = false
-  macsconfig = "data/macsconfig"
-
+  genome = false
   singleEnd = false
-  allow_multi_align = false
-  skipDupRemoval = false
-  seqCenter = false
-  saveAlignedIntermediates = false
-
-  fingerprintBins = 50000
-  broad = false
-  saturation = false
-  extendReadsLen = 100
+  narrowPeak = false
+  fragment_size = 0
 
   // Options: References
-  genome = false
-  largeRef = false
-  blacklist_filtering = false
-  saveReference = false
+  tss_bed = false
+  saveGenomeIndex = false
 
   // Options: Trimming
   clip_r1 = 0
   clip_r2 = 0
   three_prime_clip_r1 = 0
   three_prime_clip_r2 = 0
-  notrim = false
+  skipTrimming = false
   saveTrimmed = false
+
+  // Options: Alignments
+  keepDups = false
+  keepMultiMap = false
+  saveAlignedIntermediates = false
 
   // Options: Other
   outdir = './results'
+  igenomes_base = "./iGenomes"
   email = false
-  clusterOptions = false
-  name = false
   plaintext_email = false
   monochrome_logs = false
+  name = false
   maxMultiqcEmailFileSize = 25.MB
-
-  // Options: Config
-  multiqc_config = "$baseDir/assets/multiqc_config.yaml"
 
   // Options: AWSBatch
   awsqueue = false
   awsregion = 'eu-west-1'
+
+  // Options: Config
+  multiqc_config = "$baseDir/assets/multiqc/multiqc_config.yaml"
+  bamtools_filter_pe_config = "$baseDir/assets/bamtools_filter_pe.json"
+  bamtools_filter_se_config = "$baseDir/assets/bamtools_filter_se.json"
 
   // Options: Custom config
   config_profile_description = false
@@ -67,7 +61,7 @@ params {
   help = false
   hostnames = false
   tracedir = "${params.outdir}/pipeline_info"
-  igenomes_base = "./iGenomes"
+  clusterOptions = false
   igenomesIgnore = false
   custom_config_version = 'master'
   custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
@@ -98,13 +92,18 @@ profiles {
   test { includeConfig 'conf/test.config' }
 }
 
-// Capture exit codes from upstream processes when piping
-process.shell = ['/bin/bash', '-euo', 'pipefail']
-
 // Load igenomes.config if required
 if(!params.igenomesIgnore){
   includeConfig 'conf/igenomes.config'
 }
+
+// Increase time available to build conda environment
+conda {
+    createTimeout = "60 min"
+}
+
+// Capture exit codes from upstream processes when piping
+process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
   enabled = true
@@ -125,9 +124,9 @@ dag {
 
 manifest {
   name = 'nf-core/chipseq'
-  author = 'Philip Ewels'
+  author = 'Phil Ewels'
   homePage = 'https://github.com/nf-core/chipseq'
-  description = 'Analysis pipeline used for ChIP-seq data'
+  description = 'ChIPSeq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
   nextflowVersion = '>=0.32.0'
   version = '1.0dev'
