Final updates for the HACK day 2

--- a/conf/base.config
+++ b/conf/base.config
@@ -33,9 +33,9 @@
    withLabel:process_long {
      time = { check_max( 8.h * task.attempt, 'time' ) }
    }
-   withName:get_software_versions {
-     cache = false
-   }
+   //withName:get_software_versions {
+   //  cache = false
+   //}
 
  }
 
