Updated docs, bin and end-to-end run of pipeline

--- a/conf/base.config
+++ b/conf/base.config
@@ -9,40 +9,40 @@
  * run on the logged in environment.
  */
 
- process {
+process {
 
-   cpus = { check_max( 1 * task.attempt, 'cpus' ) }
-   memory = { check_max( 2.GB * task.attempt, 'memory' ) }
-   time = { check_max( 2.h * task.attempt, 'time' ) }
+  cpus = { check_max( 1 * task.attempt, 'cpus' ) }
+  memory = { check_max( 2.GB * task.attempt, 'memory' ) }
+  time = { check_max( 2.h * task.attempt, 'time' ) }
 
-   errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
-   maxRetries = 1
-   maxErrors = '-1'
+  errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
+  maxRetries = 1
+  maxErrors = '-1'
 
-   // Process-specific resource requirements
-   withLabel:process_medium {
-     cpus = { check_max( 6 * task.attempt, 'cpus' ) }
-     memory = { check_max( 48.GB * task.attempt, 'memory' ) }
-     time = { check_max( 8.h * task.attempt, 'time' ) }
-   }
-   withLabel:process_big {
-     cpus = { check_max( 12 * task.attempt, 'cpus' ) }
-     memory = { check_max( 96.GB * task.attempt, 'memory' ) }
-     time = { check_max( 16.h * task.attempt, 'time' ) }
-   }
-   withLabel:process_long {
-     time = { check_max( 8.h * task.attempt, 'time' ) }
-   }
-   //withName:get_software_versions {
-   //  cache = false
-   //}
+  // Process-specific resource requirements
+  withLabel:process_medium {
+    cpus = { check_max( 6 * task.attempt, 'cpus' ) }
+    memory = { check_max( 48.GB * task.attempt, 'memory' ) }
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  withLabel:process_big {
+    cpus = { check_max( 12 * task.attempt, 'cpus' ) }
+    memory = { check_max( 96.GB * task.attempt, 'memory' ) }
+    time = { check_max( 16.h * task.attempt, 'time' ) }
+  }
+  withLabel:process_long {
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+  withName:get_software_versions {
+    cache = false
+  }
 
- }
+}
 
- // Defaults config params, may be overwritten by later configs
- params {
-   max_memory = 128.GB
-   max_cpus = 16
-   max_time = 240.h
-   igenomes_base = 's3://ngi-igenomes/igenomes/'
- }
+// Defaults config params, may be overwritten by later configs
+params {
+  max_memory = 128.GB
+  max_cpus = 16
+  max_time = 240.h
+  igenomes_base = 's3://ngi-igenomes/igenomes/'
+}
