--- a/environment.yml
+++ b/environment.yml
@@ -31,7 +31,7 @@ dependencies:
   - macs2=2.1.2
   - homer=4.9.1
   - subread=1.6.4
+  - phantompeakqualtools=1.2
   - multiqc=1.7
-  - r-spp=1.15.5
   - bioconductor-deseq2=1.20.0
   - bioconductor-vsn=3.46.0
