--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
   singleEnd = false
   narrowPeak = false
   fragment_size = 0
+  skipDiffAnalysis = false
 
   // Options: References
   tss_bed = false
