Add in consensus peaks and differential analysis

--- a/nextflow.config
+++ b/nextflow.config
@@ -125,9 +125,9 @@ dag {
 
 manifest {
   name = 'nf-core/chipseq'
-  author = 'Phil Ewels'
+  author = 'Harshil Patel'
   homePage = 'https://github.com/nf-core/chipseq'
-  description = 'ChIPSeq peak-calling and differential analysis pipeline.'
+  description = 'ChIP-seq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
   nextflowVersion = '>=0.32.0'
   version = '1.0dev'
