Fixed single-end channel bug

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,9 +14,8 @@ params {
   // Options: Generic
   genome = false
   singleEnd = false
-  narrowPeak = false
+  seqCenter = false
   fragment_size = 0
-  skipDiffAnalysis = false
 
   // Options: References
   tss_bed = false
@@ -34,6 +33,11 @@ params {
   keepDups = false
   keepMultiMap = false
   saveAlignedIntermediates = false
+
+  // Options: Peaks
+  narrowPeak = false
+  saveMACSPileup = false
+  skipDiffAnalysis = false
 
   // Options: Other
   outdir = './results'
@@ -99,9 +103,7 @@ if(!params.igenomesIgnore){
 }
 
 // Increase time available to build conda environment
-conda {
-    createTimeout = "60 min"
-}
+conda { createTimeout = "60 min" }
 
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
@@ -125,7 +127,7 @@ dag {
 
 manifest {
   name = 'nf-core/chipseq'
-  author = 'Harshil Patel'
+  author = 'Philip Ewels'
   homePage = 'https://github.com/nf-core/chipseq'
   description = 'ChIP-seq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
