Change container from drpatelh to nf-core

--- a/nextflow.config
+++ b/nextflow.config
@@ -75,8 +75,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-//process.container = 'nfcore/chipseq:dev'
-process.container = 'drpatelh/chipseq:dev'
+process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
