Add local design for testing

--- a/conf/test.config
+++ b/conf/test.config
@@ -8,24 +8,20 @@
  */
 
 params {
+  config_profile_name = 'Test profile'
+  config_profile_description = 'Minimal test dataset to check pipeline function'
+
   max_cpus = 2
   max_memory = 6.GB
-  max_time = 48.h
-  
+  max_time = 12.h
+
   // Input data
-  singleEnd = false
-  fingerprintBins = 100 // for speed
-  readPaths = [
-    ['SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204807_Spt5-ChIP_IP1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
-    ['SRR5204808_Spt5-ChIP_IP2_SacCer_ChIP-Seq_ss100k', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204808_Spt5-ChIP_IP2_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204808_Spt5-ChIP_IP2_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
-    ['SRR5204809_Spt5-ChIP_Input1_SacCer_ChIP-Seq_ss100k', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204809_Spt5-ChIP_Input1_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204809_Spt5-ChIP_Input1_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']],
-    ['SRR5204810_Spt5-ChIP_Input2_SacCer_ChIP-Seq_ss100k', ['https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204810_Spt5-ChIP_Input2_SacCer_ChIP-Seq_ss100k_R1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/chipseq/testdata/SRR5204810_Spt5-ChIP_Input2_SacCer_ChIP-Seq_ss100k_R2.fastq.gz']]
-  ]
+  design = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/design.csv'
 
   // Genome references
-  fasta = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genome.fa'
-  macsconfig = 'https://github.com/nf-core/test-datasets/raw/chipseq/macsconfig.txt'
-  macsgsize = "9.7e6"
-  gtf = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genes.gtf'
-  bed = 'https://github.com/nf-core/test-datasets/raw/chipseq/reference/genes.bed'
+  fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
+  gtf = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genes.gtf'
+
+  // Not mandatory but permits the pipeline to run through peak-calling steps
+  macs_gsize = 1.2e7
 }
