Add fingerprintBins parameter back in for CI speed

--- a/conf/test.config
+++ b/conf/test.config
@@ -24,4 +24,7 @@ params {
 
   // Not mandatory but permits the pipeline to run through peak-calling steps
   macs_gsize = 1.2e7
+
+  // For speed to avoid CI time-out
+  fingerprintBins = 100
 }
