--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
   singleEnd = false
   seqCenter = false
   fragment_size = 0
+  fingerprintBins = 500000
 
   // Options: References
   tss_bed = false
