Add broad-cutoff parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,6 +37,7 @@ params {
 
   // Options: Peaks
   narrowPeak = false
+  broad_cutoff = 0.1
   saveMACSPileup = false
   skipDiffAnalysis = false
 
