--- a/conf/base.config
+++ b/conf/base.config
@@ -20,12 +20,17 @@ process {
   maxErrors = '-1'
 
   // Process-specific resource requirements
+  withLabel:process_low {
+    cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+    memory = { check_max( 16.GB * task.attempt, 'memory' ) }
+    time = { check_max( 4.h * task.attempt, 'time' ) }
+  }
   withLabel:process_medium {
     cpus = { check_max( 6 * task.attempt, 'cpus' ) }
     memory = { check_max( 48.GB * task.attempt, 'memory' ) }
     time = { check_max( 8.h * task.attempt, 'time' ) }
   }
-  withLabel:process_big {
+  withLabel:process_high {
     cpus = { check_max( 12 * task.attempt, 'cpus' ) }
     memory = { check_max( 96.GB * task.attempt, 'memory' ) }
     time = { check_max( 16.h * task.attempt, 'time' ) }
