--- a/nextflow.config
+++ b/nextflow.config
@@ -10,7 +10,7 @@ params {
 
   // Options: Generic
   singleEnd = false
-  seqCenter = false
+  seq_center = false
   fragment_size = 200
   fingerprintBins = 500000
 
