Initialise fingerpint_bins in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ params {
   singleEnd = false
   seq_center = false
   fragment_size = 200
-  fingerprintBins = 500000
+  fingerprint_bins = 500000
 
   // Options: References
   genome = false
