Add keepMultiqcStats parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -45,6 +45,7 @@ params {
   plaintext_email = false
   monochrome_logs = false
   name = false
+  keepMultiqcStats = false
   maxMultiqcEmailFileSize = 25.MB
 
   // Options: AWSBatch
