--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,17 @@ params {
   saveMACSPileup = false
   skipDiffAnalysis = false
 
+  // Options: QC
+  skipFastQC = false
+  skipPicardMetrics = false
+  skipPreseq = false
+  skipPlotProfile = false
+  skipPlotFingerprint = false
+  skipSpp = false
+  skipIGV = false
+  skipMultiQC = false
+  skipMultiQCStats = false
+
   // Options: Other
   outdir = './results'
   igenomes_base = "./iGenomes"
@@ -45,7 +56,6 @@ params {
   plaintext_email = false
   monochrome_logs = false
   name = false
-  keepMultiqcStats = false
   maxMultiqcEmailFileSize = 25.MB
 
   // Options: AWSBatch
@@ -89,7 +99,8 @@ try {
 
 profiles {
   awsbatch { includeConfig 'conf/awsbatch.config' }
-  conda { process.conda = "$baseDir/environment.yml" }
+  //conda { process.conda = "$baseDir/environment.yml" }
+  conda { process.conda = "/camp/stp/babs/working/patelh/code/conda/envs/nf-core-chipseq-1.0dev/" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
   singularity { singularity.enabled = true }
