--- a/nextflow.config
+++ b/nextflow.config
@@ -99,8 +99,7 @@ try {
 
 profiles {
   awsbatch { includeConfig 'conf/awsbatch.config' }
-  //conda { process.conda = "$baseDir/environment.yml" }
-  conda { process.conda = "/camp/stp/babs/working/patelh/code/conda/envs/nf-core-chipseq-1.0dev/" }
+  conda { process.conda = "$baseDir/environment.yml" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
   singularity { singularity.enabled = true }
