Add min_rep_consensus parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,7 @@ params {
   // Options: Peaks
   narrowPeak = false
   broad_cutoff = 0.1
+  min_reps_consensus = 1
   saveMACSPileup = false
   skipDiffAnalysis = false
 
