--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - docker pull nfcore/chipseq:dev
   # Fake the tag locally so that the pipeline runs properly
   # Looks weird when this is :dev to :dev, but makes sense when testing code for a release (:dev to :1.0.1)
-  - docker tag nfcore/chipseq:dev nfcore/chipseq:dev
+  - docker tag nfcore/chipseq:dev nfcore/chipseq:1.0.0
 
 install:
   # Install Nextflow
