--- a/nextflow.config
+++ b/nextflow.config
@@ -86,7 +86,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/chipseq:1.0.0'
+process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
@@ -142,7 +142,7 @@ manifest {
   description = 'ChIP-seq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
   nextflowVersion = '>=0.32.0'
-  version = '1.0.0'
+  version = '1.0.1dev'
 }
 
 // Function to ensure that resource requirements don't go beyond
