Move template code to module file

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@
  */
 
 // Global default params, used in configs
+
 params {
 
   // Options: Generic
@@ -141,7 +142,7 @@ manifest {
   homePage = 'https://github.com/nf-core/chipseq'
   description = 'ChIP-seq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
-  nextflowVersion = '>=0.32.0'
+  nextflowVersion = '>=19.07.0-edge'
   version = '1.0.1dev'
 }
 
