Change maxMultiqcEmailFileSize to max_multiqc_email_size

--- a/nextflow.config
+++ b/nextflow.config
@@ -71,7 +71,7 @@ params {
   outdir = './results'
   igenomes_base = "./iGenomes"
   igenomesIgnore = false
-  maxMultiqcEmailFileSize = 25.MB
+  max_multiqc_email_size = 25.MB
   tracedir = "${params.outdir}/pipeline_info"
   email = false
   email_on_fail = false
