--- a/nextflow.config
+++ b/nextflow.config
@@ -102,7 +102,8 @@ profiles {
   conda { process.conda = "$baseDir/environment.yml" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
-  singularity { singularity.enabled = true }
+  singularity { singularity.enabled = true
+                singularity.autoMounts = true }
   test { includeConfig 'conf/test.config' }
 }
 
