Change --design to --input

--- a/conf/test.config
+++ b/conf/test.config
@@ -16,7 +16,7 @@ params {
   max_time = 12.h
 
   // Input data
-  design = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design.csv'
+  input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design.csv'
 
   // Genome references
   fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
