--- a/nextflow.config
+++ b/nextflow.config
@@ -69,7 +69,7 @@ params {
   // Options: Other
   help = false
   outdir = './results'
-  igenomes_base = "./iGenomes"
+  igenomes_base = 's3://ngi-igenomes/igenomes/'
   igenomes_ignore = false
   max_multiqc_email_size = 25.MB
   tracedir = "${params.outdir}/pipeline_info"
@@ -80,6 +80,11 @@ params {
   name = false
   hostnames = false
   clusterOptions = false
+
+  // Defaults only, expecting to be overwritten
+  max_memory = 128.GB
+  max_cpus = 16
+  max_time = 240.h
 
 }
 
