Add PYTHONNOUSERSITE to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -125,6 +125,11 @@ if (!params.igenomes_ignore) {
 // Increase time available to build conda environment
 conda { createTimeout = "60 min" }
 
+// Export this variable to prevent local Python libraries from conflicting with those in the container
+env {
+  PYTHONNOUSERSITE = 1
+}
+
 // Capture exit codes from upstream processes when piping
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
