adding gcp profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -53,6 +53,11 @@ params {
   // Options: AWSBatch
   awsqueue = false
   awsregion = 'eu-west-1'
+  
+  // Options: GCPbatch
+  projectname = ''
+  zone = 'us-east1-b'
+  keyfile=''
 
   // Options: Config
   multiqc_config = "$baseDir/assets/multiqc/multiqc_config.yaml"
@@ -107,6 +112,7 @@ profiles {
   conda { process.conda = "$baseDir/environment.yml" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
+  gcpbatch { inclideConfig 'conf/gcpbatch.config' }
   singularity { singularity.enabled = true
                 singularity.autoMounts = true }
   test { includeConfig 'conf/test.config' }
