--- a/nextflow.config
+++ b/nextflow.config
@@ -112,7 +112,6 @@ profiles {
   conda { process.conda = "$baseDir/environment.yml" }
   debug { process.beforeScript = 'echo $HOSTNAME' }
   docker { docker.enabled = true }
-  gcpbatch { inclideConfig 'conf/gcpbatch.config' }
   singularity { singularity.enabled = true
                 singularity.autoMounts = true }
   test { includeConfig 'conf/test.config' }
@@ -164,6 +163,19 @@ manifest {
   mainScript = 'main.nf'
   nextflowVersion = '>=19.10.0'
   version = '1.1.0'
+}
+
+cloud {
+    driver = 'google'
+    imageId = 'debian-9-stretch-v20191014'
+    instanceType = 'n1-highcpu-8'
+    userName = params.name
+    keyfile= params.keyfile
+}
+
+google {
+    project = params.project
+    zone = params.zone
 }
 
 // Function to ensure that resource requirements don't go beyond
