--- a/environment.yml
+++ b/environment.yml
@@ -7,34 +7,35 @@ channels:
   - defaults
 dependencies:
   ## conda-forge packages
-  - gawk=4.2.1
-  - r-base=3.4.1
-  - r-optparse=1.6.0
+  - gawk=5.0.1
+  - r-base=3.6.1
+  - r-optparse=1.6.4
   - r-rcolorbrewer=1.1_2
-  - r-ggplot2=3.1.0
+  - r-ggplot2=3.2.1
   - r-reshape2=1.4.3
   - r-scales=1.0.0
-  - r-pheatmap=1.0.10
-  - r-lattice=0.20_35
-  - r-upsetr=1.3.3
-  - r-xfun=0.3
+  - r-pheatmap=1.0.12
+  - r-lattice=0.20_38
+  - r-upsetr=1.4.0
+  - r-xfun=0.11
 
   ## bioconda packages
   - fastqc=0.11.8
-  - trim-galore=0.5.0
+  - trim-galore=0.6.4
   - bwa=0.7.17
   - samtools=1.9
-  - picard=2.19.0
+  - picard=2.21.3
   - bamtools=2.5.1
-  - pysam=0.15.2
-  - bedtools=2.27.1
-  - ucsc-bedgraphtobigwig=377
-  - deeptools=3.2.1
-  - macs2=2.1.2
-  - homer=4.9.1
+  - pysam=0.15.3
+  - bedtools=2.29.0
+  - ucsc-bedgraphtobigwig=357
+  - deeptools=3.3.1
+  - macs2=2.2.5
+  - genrich=0.6
+  - homer=4.10
   - subread=1.6.4
-  - phantompeakqualtools=1.2
+  - phantompeakqualtools=1.2.1.1
   - preseq=2.0.3
   - multiqc=1.7
-  - bioconductor-deseq2=1.20.0
-  - bioconductor-vsn=3.46.0
+  - bioconductor-deseq2=1.26.0
+  - bioconductor-vsn=3.54.0
