Skip plotProfile for tests

--- a/conf/test.config
+++ b/conf/test.config
@@ -27,4 +27,7 @@ params {
 
   // For speed to avoid CI time-out
   fingerprint_bins = 100
+
+  // MultiQC v1.7 bug with Python3
+  skip_plot_profile = true
 }
