--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - r-lattice=0.20_38
   - r-upsetr=1.4.0
   - r-xfun=0.11
-  - r::r-stringi=1.4.3
+  - icu=64.2
 
   ## bioconda packages
   - fastqc=0.11.8
