--- a/environment.yml
+++ b/environment.yml
@@ -7,36 +7,36 @@ channels:
   - defaults
 dependencies:
   ## conda-forge packages
-  - gawk=5.0.1
-  - r-base=3.6.1
-  - r-optparse=1.6.4
-  - r-rcolorbrewer=1.1_2
-  - r-ggplot2=3.2.1
-  - r-reshape2=1.4.3
-  - r-scales=1.0.0
-  - r-pheatmap=1.0.12
-  - r-lattice=0.20_38
-  - r-upsetr=1.4.0
-  - r-xfun=0.11
-  - icu=64.2
+  - conda-forge::gawk=5.0.1
+  - conda-forge::r-base=3.6.1
+  - conda-forge::r-optparse=1.6.4
+  - conda-forge::r-rcolorbrewer=1.1_2
+  - conda-forge::r-ggplot2=3.2.1
+  - conda-forge::r-reshape2=1.4.3
+  - conda-forge::r-scales=1.0.0
+  - conda-forge::r-pheatmap=1.0.12
+  - conda-forge::r-lattice=0.20_38
+  - conda-forge::r-upsetr=1.4.0
+  - conda-forge::r-xfun=0.11
+  - conda-forge::icu=64.2
 
   ## bioconda packages
-  - fastqc=0.11.8
-  - trim-galore=0.6.4
-  - bwa=0.7.17
-  - samtools=1.9
-  - picard=2.21.3
-  - bamtools=2.5.1
-  - pysam=0.15.3
-  - bedtools=2.29.0
-  - ucsc-bedgraphtobigwig=357
-  - deeptools=3.3.1
-  - macs2=2.2.5
-  - genrich=0.6
-  - homer=4.10
-  - subread=1.6.4
-  - phantompeakqualtools=1.2.1.1
-  - preseq=2.0.3
-  - multiqc=1.7
-  - bioconductor-deseq2=1.26.0
-  - bioconductor-vsn=3.54.0
+  - bioconda::fastqc=0.11.8
+  - bioconda::trim-galore=0.6.4
+  - bioconda::bwa=0.7.17
+  - bioconda::samtools=1.9
+  - bioconda::picard=2.21.3
+  - bioconda::bamtools=2.5.1
+  - bioconda::pysam=0.15.3
+  - bioconda::bedtools=2.29.0
+  - bioconda::ucsc-bedgraphtobigwig=357
+  - bioconda::deeptools=3.3.1
+  - bioconda::macs2=2.2.5
+  - bioconda::genrich=0.6
+  - bioconda::homer=4.10
+  - bioconda::subread=1.6.4
+  - bioconda::phantompeakqualtools=1.2.1.1
+  - bioconda::preseq=2.0.3
+  - bioconda::multiqc=1.7
+  - bioconda::bioconductor-deseq2=1.26.0
+  - bioconda::bioconductor-vsn=3.54.0
