Add link to MultiQC issue

--- a/conf/test.config
+++ b/conf/test.config
@@ -29,5 +29,6 @@ params {
   fingerprint_bins = 100
 
   // MultiQC v1.7 bug with Python3
+  // See https://github.com/ewels/MultiQC/issues/1057
   skip_plot_profile = true
 }
