Replace --skip_diff_analysis with --skip_consensus_peaks

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,7 +38,7 @@ params {
   broad_cutoff = 0.1
   min_reps_consensus = 1
   save_macs_pileup = false
-  skip_diff_analysis = false
+  skip_consensus_peaks = false
 
   // Options: QC
   skip_fastqc = false
