--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,12 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Nextflow
         run: |
-          export NXF_VER=${{ matrix.nxf_ver }}
+          {% raw %}export NXF_VER=${{ matrix.nxf_ver }}{% endraw %}
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin/
+      - name: Pull image
+        run: |
+          docker pull nfcore/chipseq:dev && docker tag nfcore/chipseq:dev nfcore/chipseq:dev
       - name: Run test
         run: |
           nextflow run ${GITHUB_WORKSPACE} -ansi-log false -profile test,docker
