--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install Nextflow
         run: |
           export NXF_VER=${{ matrix.nxf_ver }}
+          export NXF_ANSI_LOG=false
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin/
       - name: Pull image
@@ -22,4 +23,4 @@ jobs:
           docker pull nfcore/chipseq:dev && docker tag nfcore/chipseq:dev nfcore/chipseq:dev
       - name: Run test
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -ansi-log false -profile test,docker
+          nextflow run ${GITHUB_WORKSPACE} -profile test,docker
