--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -13,4 +13,4 @@ jobs:
       # PRs are only ok if coming from an nf-core `dev` branch or a fork `patch` branch
       - name: Check PRs
         run: |
-          { [[ $(git remote get-url origin) == *chipseq ]] && [[ ${GITHUB_HEAD_REF} = "dev" ]]; } || [[ ${GITHUB_HEAD_REF} == "patch" ]]
+          { [[ $(git remote get-url origin) == *nf-core/chipseq ]] && [[ ${GITHUB_HEAD_REF} = "dev" ]]; } || [[ ${GITHUB_HEAD_REF} == "patch" ]]
