--- a/assets/multiqc_config.yaml
+++ b/assets/multiqc_config.yaml
@@ -3,7 +3,9 @@ report_comment: >
     analysis pipeline. For information about how to interpret these results, please see the
     <a href="https://github.com/nf-core/chipseq" target="_blank">documentation</a>.
 report_section_order:
-    nf-core/chipseq-software-versions:
+    software_versions:
         order: -1000
+    nf-core-chipseq-summary:
+        order: -1001
 
 export_plots: true
