--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,7 @@ params {
   min_reps_consensus = 1
   save_macs_pileup = false
   skip_consensus_peaks = false
+  skip_diff_analysis = false
 
   // Options: QC
   skip_fastqc = false
