Export R_PROFILE_USER in env scope

--- a/nextflow.config
+++ b/nextflow.config
@@ -125,9 +125,10 @@ if (!params.igenomes_ignore) {
 // Increase time available to build conda environment
 conda { createTimeout = "60 min" }
 
-// Export this variable to prevent local Python libraries from conflicting with those in the container
+// Export these variables to prevent local Python/R libraries from conflicting with those in the container
 env {
   PYTHONNOUSERSITE = 1
+  R_PROFILE_USER = "~/.Rprofile"
 }
 
 // Capture exit codes from upstream processes when piping
