--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,9 @@ params {
   min_reps_consensus = 1
   save_macs_pileup = false
   skip_consensus_peaks = false
+
+  // Options: Differential analysis
+  deseq2_vst = false
   skip_diff_analysis = false
 
   // Options: QC
@@ -129,6 +132,7 @@ conda { createTimeout = "60 min" }
 env {
   PYTHONNOUSERSITE = 1
   R_PROFILE_USER = "~/.Rprofile"
+  R_ENVIRON_USER = "~/.Renviron"
 }
 
 // Capture exit codes from upstream processes when piping
