--- a/nextflow.config
+++ b/nextflow.config
@@ -131,8 +131,8 @@ conda { createTimeout = "60 min" }
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 env {
   PYTHONNOUSERSITE = 1
-  R_PROFILE_USER = "~/.Rprofile"
-  R_ENVIRON_USER = "~/.Renviron"
+  R_PROFILE_USER = "/.Rprofile"
+  R_ENVIRON_USER = "/.Renviron"
 }
 
 // Capture exit codes from upstream processes when piping
