--- a/nextflow.config
+++ b/nextflow.config
@@ -69,6 +69,7 @@ params {
   // Options: Other
   help = false
   outdir = './results'
+  publish_dir_mode = 'copy'
   igenomes_base = 's3://ngi-igenomes/igenomes/'
   igenomes_ignore = false
   max_multiqc_email_size = 25.MB
