skip_preseq in tests

--- a/conf/test.config
+++ b/conf/test.config
@@ -28,4 +28,8 @@ params {
 
   // For speed to avoid CI time-out
   fingerprint_bins = 100
+
+  // Tests fail without this:
+  // ERROR: Max count before zero is les than min required count (4), sample not sufficiently deep or duplicates removed
+  skip_preseq = true
 }
