--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -1,12 +1,11 @@
 name: nf-core AWS test
 # This workflow is triggered on PRs to the master branch.
-# It runs the -profile 'test' on AWS batch
+# It runs the -profile 'test_full' on AWS batch
 
 on:
   push:
     branches:
       - master
-      - dev # just for testing purposes, to be removed
   release:
     types: [published]
 
@@ -28,4 +27,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_KEY_SECRET}}
           TOWER_ACCESS_TOKEN: ${{secrets.TOWER_ACCESS_TOKEN}}
         run: |
-          aws batch submit-job --region eu-west-1 --job-name nf-core-chipseq --job-queue 'default-8b3836e0-5eda-11ea-96e5-0a2c3f6a2a32' --job-definition nextflow --container-overrides '{"command": ["nf-core/chipseq", "-r '"${GITHUB_SHA}"' -profile test --outdir s3://nf-core-awsmegatests/chipseq/results-'"${GITHUB_SHA}"' -w s3://nf-core-awsmegatests/chipseq/work-'"${GITHUB_SHA}"' -with-tower"], "environment": [{"name": "TOWER_ACCESS_TOKEN", "value": "'"$TOWER_ACCESS_TOKEN"'"}]}'
+          aws batch submit-job --region eu-west-1 --job-name nf-core-chipseq --job-queue 'default-8b3836e0-5eda-11ea-96e5-0a2c3f6a2a32' --job-definition nextflow --container-overrides '{"command": ["nf-core/chipseq", "-r '"${GITHUB_SHA}"' -profile test_full --outdir s3://nf-core-awsmegatests/chipseq/results-'"${GITHUB_SHA}"' -w s3://nf-core-awsmegatests/chipseq/work-'"${GITHUB_SHA}"' -with-tower"], "environment": [{"name": "TOWER_ACCESS_TOKEN", "value": "'"$TOWER_ACCESS_TOKEN"'"}]}'
