--- a/nextflow.config
+++ b/nextflow.config
@@ -120,6 +120,7 @@ profiles {
     singularity.autoMounts = true
   }
   test { includeConfig 'conf/test.config' }
+  test_full { includeConfig 'conf/test_full.config' }
 }
 
 // Load igenomes.config if required
