Revert bump-versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Pull docker image
         run: |
           docker pull nfcore/chipseq:dev
-          docker tag nfcore/chipseq:dev nfcore/chipseq:1.2.0
+          docker tag nfcore/chipseq:dev nfcore/chipseq:dev
       - name: Run pipeline with test data
         run: |
           nextflow run ${GITHUB_WORKSPACE} -profile test,docker
@@ -44,7 +44,7 @@ jobs:
       - name: Pull docker image
         run: |
           docker pull nfcore/chipseq:dev
-          docker tag nfcore/chipseq:dev nfcore/chipseq:1.2.0
+          docker tag nfcore/chipseq:dev nfcore/chipseq:dev
       - name: Run pipeline with various options
         run: |
           nextflow run ${GITHUB_WORKSPACE} -profile test,docker ${{ matrix.parameters }}
