--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,6 @@
 # You can use this file to create a conda environment for this pipeline:
 #   conda env create -f environment.yml
-name: nf-core-chipseq-1.2.0
+name: nf-core-chipseq-1.1.1dev
 channels:
   - conda-forge
   - bioconda
