--- a/assets/multiqc_config.yaml
+++ b/assets/multiqc_config.yaml
@@ -3,21 +3,21 @@ report_comment: >
     analysis pipeline. For information about how to interpret these results, please see the
     <a href="https://github.com/nf-core/chipseq/blob/master/docs/output.md" target="_blank">documentation</a>.
 
-export_plots: true
+data_format: 'yaml'
 
-fn_clean_exts:
-    - 'fastq.gz'
-    - '_trimmed'
-    - '_val'
-    - 'sorted.bam'
-    - '.Lb'
-    - 'mkD'
-    - 'clN'
-    - 'mLb'
-    - '_peaks'
-    - '_spp'
-    - '.spp'
-    - 'ccurve'
+run_modules:
+    - custom_content
+    - fastqc
+    - cutadapt
+    - samtools
+    - picard
+    - preseq
+    - featureCounts
+    - deeptools
+    - phantompeakqualtools
+
+exclude_modules:
+    - 'general_stats'
 
 module_order:
     - fastqc:
@@ -134,9 +134,22 @@ report_section_order:
         order: -3700
 
 custom_plot_config:
-    picard-insertsize:
+    picard_insert_size:
         cpswitch_c_active: False
         smooth_points: 1000
-
     featurecounts:
         cpswitch_c_active: False
+
+extra_fn_clean_exts:
+    - 'fastq.gz'
+    - '_trimmed'
+    - '_val'
+    - 'sorted.bam'
+    - '.Lb'
+    - 'mkD'
+    - 'clN'
+    - 'mLb'
+    - '_peaks'
+    - '_spp'
+    - '.spp'
+    - 'ccurve'
