--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,7 @@ params {
   broad_cutoff = 0.1
   min_reps_consensus = 1
   save_macs_pileup = false
+  skip_peak_qc = false
   skip_consensus_peaks = false
 
   // Options: Differential analysis
