--- a/nextflow.config
+++ b/nextflow.config
@@ -40,6 +40,7 @@ params {
   min_reps_consensus = 1
   save_macs_pileup = false
   skip_peak_qc = false
+  skip_peak_annotation = false
   skip_consensus_peaks = false
 
   // Options: Differential analysis
