Update AWS tests

--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - master
+      - dev
   release:
     types: [published]
 
@@ -33,4 +34,4 @@ jobs:
           --job-name nf-core-chipseq \
           --job-queue 'default-8b3836e0-5eda-11ea-96e5-0a2c3f6a2a32' \
           --job-definition nextflow-4GiB \
-          --container-overrides '{"command": ["nf-core/chipseq", "-r '"${GITHUB_SHA}"' -profile test_full --outdir s3://nf-core-awsmegatests/chipseq/results-'"${GITHUB_SHA}"' -w s3://nf-core-awsmegatests/chipseq/work-'"${GITHUB_SHA}"' -with-tower"], "environment": [{"name": "TOWER_ACCESS_TOKEN", "value": "'"$TOWER_ACCESS_TOKEN"'"}, {"name": "NXF_OPTS", "value": "-XX:+UseG1GC"}]}'
+          --container-overrides '{"command": ["nf-core/chipseq", "-r '"${GITHUB_SHA}"' -profile test --outdir s3://nf-core-awsmegatests/chipseq/results-'"${GITHUB_SHA}"' -w s3://nf-core-awsmegatests/chipseq/work-'"${GITHUB_SHA}"' -with-tower"], "environment": [{"name": "TOWER_ACCESS_TOKEN", "value": "'"$TOWER_ACCESS_TOKEN"'"}, {"name": "NXF_OPTS", "value": "-XX:+UseG1GC"}]}'
