--- a/nextflow.config
+++ b/nextflow.config
@@ -36,6 +36,8 @@ params {
   // Options: Peaks
   narrow_peak = false
   broad_cutoff = 0.1
+  macs_fdr = false
+  macs_pvalue = false
   min_reps_consensus = 1
   save_macs_pileup = false
   skip_peak_qc = false
