--- a/nextflow.config
+++ b/nextflow.config
@@ -29,6 +29,7 @@ params {
   save_trimmed = false
 
   // Options: Alignments
+  bwa_min_score = false
   keep_dups = false
   keep_multi_map = false
   save_align_intermeds = false
