--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -13,7 +13,8 @@ params {
 
   // Input data
   input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/design_full.csv'
+  single_end = true
 
   // Genome references
-  genome = 'hg38'
+  genome = 'hg19'
 }
