--- a/nextflow.config
+++ b/nextflow.config
@@ -96,7 +96,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/chipseq:1.2.0'
+process.container = 'nfcore/chipseq:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
@@ -169,7 +169,7 @@ manifest {
   description = 'ChIP-seq peak-calling and differential analysis pipeline.'
   mainScript = 'main.nf'
   nextflowVersion = '>=19.10.0'
-  version = '1.2.0'
+  version = '1.3.0dev'
 }
 
 // Function to ensure that resource requirements don't go beyond
