Remove cache for testing

--- a/conf/base.config
+++ b/conf/base.config
@@ -41,8 +41,8 @@ process {
   withLabel:error_ignore {
     errorStrategy = 'ignore'
   }
-  withName:GET_SOFTWARE_VERSIONS {
-    cache = false
-  }
+  //withName:GET_SOFTWARE_VERSIONS {
+  //  cache = false
+  //}
 
 }
