Add in TrimGalore

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -11,5 +11,11 @@ params {
       publish_dir      = "fastqc"
       publish_results  = "all"
     }
+    'trim_galore' {
+      args             = "--fastqc"
+      suffix           = ""
+      publish_dir      = "trim_galore"
+      publish_results  = "all"
+    }
   }
 }
