--- a/conf/modules.config
+++ b/conf/modules.config
@@ -17,5 +17,11 @@ params {
       publish_dir      = "trim_galore"
       publish_results  = "all"
     }
+    'bwa_index' {
+      args             = ""
+      suffix           = ""
+      publish_dir      = "genome/bwa_index"
+      publish_results  = "all"
+    }
   }
 }
