--- a/conf/modules.config
+++ b/conf/modules.config
@@ -23,5 +23,11 @@ params {
       publish_dir      = "genome/bwa_index"
       publish_results  = "all"
     }
+    'gtf2bed' {
+      args             = ""
+      suffix           = ""
+      publish_dir      = "genome"
+      publish_results  = "all"
+    }
   }
 }
