Add genome filter processes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,5 +29,17 @@ params {
       publish_dir      = "genome"
       publish_results  = "all"
     }
+    'make_genome_filter' {
+      args             = ""
+      suffix           = ""
+      publish_dir      = "genome"
+      publish_results  = "all"
+    }
+    'get_chrom_sizes' {
+      args             = ""
+      suffix           = ""
+      publish_dir      = "genome"
+      publish_results  = "all"
+    }
   }
 }
