Refactor mapping with bash expanded indices

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,7 +18,7 @@ params {
       publish_results  = "all"
     }
     'bwa_index' {
-      args             = ""
+      args             = "-a bwtsw"
       suffix           = ""
       publish_dir      = "genome/bwa_index"
       publish_results  = "all"
@@ -39,6 +39,13 @@ params {
       args             = ""
       suffix           = ""
       publish_dir      = "genome"
+      publish_results  = "all"
+    }
+    'bwa_mem' {
+      args             = "-M"
+      args2            = "-h -F 0x0100 -O BAM"
+      suffix           = ".Lb"
+      publish_dir      = "bwa"
       publish_results  = "all"
     }
   }
