--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
   // Options: Generic
   input = './design.csv'
   single_end = false
-  seq_center = false
+  seq_center = ''
   fragment_size = 200
   fingerprint_bins = 500000
 
