Finesse mapping and sorting steps

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,5 +48,11 @@ params {
       publish_dir      = "bwa"
       publish_results  = "all"
     }
+    'samtools_sort_lib' {
+      args             = ""
+      suffix           = ".Lb.sorted"
+      publish_dir      = "bwa"
+      publish_results  = "all"
+    }
   }
 }
